tests/samples/0105/error.txt
error[P0047]: literal type `null` cannot be used in an intersection
  --> 0105/code.ara:2:14
  |
2 | function foo(null&Bar $bar): mixed {}
  |              ^^^^-
  |
  = a literal type is either a literal integer, a literal float, a literal string, `false`, `true`, or `null`.

error[P0047]: literal type `null` cannot be used in an intersection
  --> 0105/code.ara:4:18
  |
4 | function foo(Bar&null $bar): mixed {}
  |                 -^^^^
  |
  = a literal type is either a literal integer, a literal float, a literal string, `false`, `true`, or `null`.

error: failed to parse "0105/code.ara" due to the above issue(s)

